Fix-typo-readme

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 thanks you for your your feedback !!
-thí í some ìnormation abour gut and github !!
+this is some information about git and github !!
